modules/networking/nat.tf
resource "aws_eip" "nat" {
    domain = "vpc"
    tags = merge(var.tags, { Name = "${var.name}-nat-eip" })
}

resource "aws_nat_gateway" "this" {
    allocation_id = aws_eip.nat.id
    subnet_id = aws_subnet.public[0].id
    tags = merge(var.tags, { Name = "${var.name}-nat-gateway" })

    depends_on = [aws_internet_gateway.this]
}
